<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="#000000"
    android:orientation="vertical" >
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="37dp"
    android:orientation="horizontal">
   
    <LinearLayout 
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button 
            android:id="@+id/ui2_button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/my_center"/>
        </LinearLayout>    
        
        <LinearLayout 
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button 
            android:id="@+id/ui2_button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHighlight="#00ff00"
            android:layout_weight="1"
            android:text="@string/sport_center"/>
        </LinearLayout>    
        
        <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1">
        <Button 
            android:id="@+id/ui2_button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHighlight="#00ff00"
            android:layout_weight="1"
            android:text="@string/food_center"/>
          </LinearLayout>    
    </LinearLayout>
	   
</LinearLayout>    