<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_alignBottom="@+id/userName"
        android:layout_alignParentTop="true"
        android:gravity="fill_vertical"
        android:text="@string/count" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userPass"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:gravity="fill_vertical"
        android:text="@string/pass" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:hint="请输入账户yonghuming" >
        
    </EditText>
	
	 <EditText
	     android:id="@+id/userPass"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_below="@+id/userName"
	     android:layout_toRightOf="@+id/textView2"
	     android:ems="10"
	     android:hint="请输入密码yonghumima" >

    </EditText>

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:onClick="dostart"
        android:text="@string/enter" />

   
</RelativeLayout>
